src/test/ui/borrowck/borrowck-for-loop-correct-cmt-for-pattern.stderr
error[E0596]: cannot borrow data in a `&` reference as mutable
  --> $DIR/borrowck-for-loop-correct-cmt-for-pattern.rs:12:10
   |
LL |     for &a in x.iter() {
   |          ^ cannot borrow as mutable through `&` reference

error[E0507]: cannot move out of a shared reference
  --> $DIR/borrowck-for-loop-correct-cmt-for-pattern.rs:18:15
   |
LL |     for &a in &f.a {
   |         --    ^^^^
   |         ||
   |         |data moved here
   |         |move occurs because `a` has type `std::boxed::Box<isize>`, which does not implement the `Copy` trait
   |         help: consider removing the `&`: `a`

error[E0507]: cannot move out of a shared reference
  --> $DIR/borrowck-for-loop-correct-cmt-for-pattern.rs:22:15
   |
LL |     for &a in x.iter() {
   |         --    ^^^^^^^^
   |         ||
   |         |data moved here
   |         |move occurs because `a` has type `std::boxed::Box<i32>`, which does not implement the `Copy` trait
   |         help: consider removing the `&`: `a`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0507, E0596.
For more information about an error, try `rustc --explain E0507`.
